# yew-counter

./: .gitignore  Cargo.toml  LICENSE  README.md  Trunk.toml  app.css  index.css  index.html  tailwind.config.js
src/: app.rs  counter_ctx.rs  main.rs
src/components/: count_list.rs  header.rs  mod.rs  navbar.rs  switch.rs  tag_selector.rs
src/counter_ctx/: mod.rs  structs.rs  utils.rs
src/routes/: home.rs  mod.rs  new_count.rs
