[package]
name = "trunk-template"
version = "0.1.0"
edition = "2021"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = "1.0.163"
serde_json = "1.0.96"
web-sys = { version = "0.3.63", features = ["Window", "Storage", "Element", "Event", "SubmitEvent"]}
yew = { version="0.20", features=["csr"] }
yew_icons = {version = "0.7", features = [
    "FontAwesomeSolidTags", 
    "HeroiconsSolidPlus", 
    "HeroiconsSolidMinus", 
    "HeroiconsSolidBars3", 
    "HeroiconsOutlineXMark",
    "HeroiconsSolidHome"
    ]}
yew-router = "0.17"